MathEvent/MathEvent/wwwroot/css/MyStyle.css
:root {
    --me-main-color: #5299AD;
    --me-sea-green-crayola: #99E0CE;
    --me-honeydew: #DFFFE7;
    --me-dark-cyan: #088A84;
    --me-dark-cyan-light: #0C9D96;
    --me-blue: #2B959A;
    --me-blue-light: #B9F3F6;
    --me-royal-blue: #3546DD;
    --me-royal-blue-light: #A3CDF5;
    --me-green-lawn: #1EA346;
    --me-green-lawn-light: #5CFA8C;
    --me-sea-green-crayola-light: #E1F4EF;
    --me-murena: #1B5E70;
    --me-danger-light: #FAAEC1;
    --me-danger: #F46E90;
    --me-shadow-cryola: #80A89E;
    --me-shadow-primary: #8D92B9;
    --me-shadow-green-lawn: #87BA97;
    --me-shadow-blue: #76AFB2;
    --me-shadow-danger: #B76C7F;
}

.pop-container {
    position: relative;
}

.btn-pop {
    width: 90px;
}

.popconfirm {
    background-color: white;
    border-style: solid;
    border-width: 1px;
    border-color: var(--me-sea-green-crayola);
    position: absolute;
    top: -100px;
    padding: 10px;
    border-radius: 8px;
}

.me-border-image {
    border: 20px solid transparent;
    border-image-source: url("/Images/input_back2.png");
    border-image-repeat: round;
    border-image-slice: 27 27 27 27;
    border-image-width: 10px 10px 10px 10px;
    border-image-outset: 0px 0px 0px 0px;
    border-image-repeat: stretch stretch;
}

.rounded-corners-gradient-borders {
    border: double 4px transparent;
    border-radius: 20px;
    background-image: url("/Images/input_back.png");
    background-origin: border-box;
    background-clip: content-box, border-box;
}

/*Загрузка файла на сервер>*/
.upload-btn-wrapper {
    position: relative;
    overflow: hidden;
    display: inline-block;
    width: 100%;
}

    .upload-btn-wrapper:hover .upload-btn {
        background-color: var(--me-dark-cyan);
        border-color: var(--me-dark-cyan);
        color: var(--me-sea-green-crayola-light);
    }

.upload-btn {
    border: 2px solid var(--me-main-color);
    color: var(--me-main-color);
    background-color: white;
    padding: 3px 20px;
    border-radius: 8px;
    font-size: 20px;
    font-weight: bold;
}

.upload-btn-wrapper input[type=file] {
    font-size: 100px;
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
}
/*<Загрузка файла на сервер*/

/*<Скачать файл с сервера*/
.download-btn {
    border: 2px solid var(--me-main-color);
    color: var(--me-main-color);
    background-color: white;
    padding-left: 15px;
    padding-right: 15px;
    border-radius: 10px;
    font-size: 17px;
    font-weight: bold;
}

    .download-btn:hover {
        background-color: var(--me-dark-cyan);
        border-color: var(--me-dark-cyan);
        color: var(--me-sea-green-crayola-light);
    }
/*Скачать файл с сервера>*/

/*Список>*/
.me-list {
    border-top: 20px solid var(--me-dark-cyan);
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.me-ol {
    list-style-type: none;
    padding-left: 20px;
}

.me-li {
    border-bottom: 1px solid #c4c4c4;
    margin-bottom: 10px;
}
/*<Список*/

.input-bg-image {
    background-image: url("/Images/input_back_final.png");
    background-size: cover;
}

.head-bg-image {
    background-image: url("/Images/head_back_new.png");
    background-size: cover;
    min-height: 150px;
}

.jmb-bg-image {
    background-image: url("/Images/jumb_back_new_1.png");
    background-size: cover;
    padding-left: 2px;
    padding-right: 2px;
}

/*Поиск>*/
.search-2 input[type=text] {
    border-bottom: 1px solid var(--me-main-color);
    box-shadow: 0 1px 0 0 var(--me-main-color);
}

.search .fa, .search-2 .fa {
    color: var(--me-main-color);
}

.fa-search:hover {
    color: var(--me-sea-green-crayola);
}
/*Поиск>*/

/*Переопределение цветов>*/
.btn-primary, .btn-light, .btn-success, .btn-info, .btn-danger, .btn-jumb {
    padding-left: 15px;
    padding-right: 15px;
    border-radius: 10px;
    font-weight: 500;
}

    .btn-primary:hover, .btn-success:hover, .btn-info:hover, .btn-danger:hover, .btn-jumb:hover, .btn-light:hover {
        color: white;
    }

.btn-primary {
    background-color: var(--me-royal-blue-light);
    border-color: var(--me-royal-blue-light);
    color: black;
    box-shadow: var(--me-shadow-primary) 1px 3px 7px;
}

    .btn-primary:hover {
        background-color: var(--me-royal-blue);
        border-color: var(--me-royal-blue);
        box-shadow: var(--me-shadow-primary) 1px 5px 7px;
    }

.btn-jumb {
    background-color: var(--me-royal-blue);
    border-color: var(--me-royal-blue);
    color: white;
    box-shadow: var(--me-shadow-primary) 1px 3px 7px;
}

    .btn-jumb:hover {
        background-color: var(--me-royal-blue-light);
        border-color: var(--me-royal-blue-light);
        box-shadow: var(--me-shadow-primary) 1px 5px 7px;
    }

.btn-success {
    background-color: var(--me-green-lawn-light);
    border-color: var(--me-green-lawn-light);
    color: black;
    box-shadow: var(--me-shadow-green-lawn) 1px 3px 7px;
}

    .btn-success:hover {
        background-color: var(--me-green-lawn);
        border-color: var(--me-green-lawn);
        box-shadow: var(--me-shadow-green-lawn) 1px 5px 7px;
    }

.btn-info {
    background-color: var(--me-blue-light);
    border-color: var(--me-blue-light);
    color: black;
    box-shadow: var(--me-shadow-blue) 1px 3px 7px;
}

    .btn-info:hover {
        background-color: var(--me-blue);
        border-color: var(--me-blue);
        box-shadow: var(--me-shadow-blue) 1px 5px 7px;
    }

.btn-danger {
    background-color: var(--me-danger-light);
    border-color: var(--me-danger-light);
    color: black;
    box-shadow: var(--me-shadow-danger) 1px 3px 7px;
}

    .btn-danger:hover {
        background-color: var(--me-danger);
        border-color: var(--me-danger);
        box-shadow: var(--me-shadow-danger) 1px 5px 7px;
    }

/*<btn-secondary*/
.btn-secondary {
    color: #fff;
    background-color: var(--me-dark-cyan);
    border-color: var(--me-dark-cyan);
}

    .btn-secondary:hover {
        color: #fff;
        background-color: var(--me-dark-cyan-light);
        border-color: var(--me-dark-cyan-light);
    }

    .btn-secondary:focus, .btn-secondary.focus {
        color: #fff;
        background-color: var(--me-dark-cyan-light);
        border-color: var(--me-dark-cyan-light);
        box-shadow: 0 0 0 0.2rem rgba(8, 138, 132, 0.29);
    }

    .btn-secondary.disabled, .btn-secondary:disabled {
        color: #fff;
        background-color: var(--me-sea-green-crayola-light);
        border-color: var(--me-sea-green-crayola-light);
    }

    .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
    .show > .btn-secondary.dropdown-toggle {
        color: #fff;
        background-color: var(--me-dark-cyan-light);
        border-color: var(--me-dark-cyan-light);
    }

        .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
        .show > .btn-secondary.dropdown-toggle:focus {
            box-shadow: 0 0 0 0.2rem var(--me-murena);
        }
/*btn-secondary>*/

.btn-light {
    background-color: var(--me-sea-green-crayola-light);
    border-color: var(--me-sea-green-crayola-light);
    color: black;
    box-shadow: var(--me-shadow-cryola) 1px 3px 7px;
}

    .btn-light:hover {
        background-color: var(--me-sea-green-crayola);
        border-color: var(--me-sea-green-crayola);
        box-shadow: var(--me-shadow-cryola) 1px 5px 7px;
    }

.input-group-text {
    background-color: var(--me-main-color);
    width: 46px;
    height: 38px;
}

/*.btn-success {
    background-color: var(--me-green-lawn);
    border-color: var(--me-green-lawn);
}*/
/*<Переопределение цветов*/
.royal-blue {
    color: var(--me-royal-blue);
}

.bg-main {
    background-color: var(--me-main-color);
}

.bg-very-light-blue {
    background-color: var(--me-sea-green-crayola-light);
}

.bg-dark-cyan {
    background-color: var(--me-dark-cyan);
}

.bg-murena {
    background-color: var(--me-murena);
}

.bg-sea-crayola {
    background: var(--me-sea-green-crayola);
}

.text-dark-cyan {
    color: var(--me-dark-cyan);
}

.text-royal-blue {
    color: var(--me-royal-blue)
}

.text-sea-crayola {
    color: var(--me-sea-green-crayola-light)
}

.opacity-8 {
    opacity: 0.8;
}

/*Стиль ссылок футера>*/
.footer-link:link {
    color: whitesmoke;
}

/* visited link */
.footer-link:visited {
    color: whitesmoke;
}
/*<Стиль ссылок футера>*/

.edit-link:link, .edit-link:visited {
    color: var(--me-dark-cyan);
}

.edit-link:hover {
    color: var(--me-dark-cyan-light);
    text-decoration: none;
}

.main-link:link, main-link:visited {
    color: var(--me-royal-blue);
}

.main-link:hover {
    color: var(--me-royal-blue-light);
    text-decoration: none;
}

.nav-link {
    color: var(--me-main-color);
    font-size: 1.2rem;
    font-weight: 400;
    line-height: 1.2;
}


/* mouse over link */
.footer-link:hover {
    color: var(--me-sea-green-crayola-light);
}

/* selected link */
.footer-link:active {
    color: whitesmoke;
}

.control-label {
    color: var(--me-murena);
    font-size: 1.1rem;
    font-weight: 500;
}

/*для того, чтобы футер прилип к низу>*/
html, body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    margin-bottom: 0px;
}

.bottom-subscribe-block {
    position: absolute;
    bottom: 0;
}

.content {
    flex: 1 0 auto;
}
/*<для того чтобы футер прилип к низу*/

.half-bright {
    filter: brightness(50%);
}

textarea {
    min-width: 100%;
    resize: none;
}

.border-left-main {
    border-left: 3px solid var(--me-main-color);
    padding-left: 10px;
    margin-left: 10px;
}

.border-radius-10 {
    border-radius: 10px;
}

.background-dark {
    background: rgba(0, 0, 0, 0.28);
}

.dark-light {
    text-shadow: #000000 10px 10px 20px;
    color: #ffffff;
}

.bg-light-blue {
    background: rgba(26, 138, 203, 0.50);
    /*rgba(26, 138, 203, 0.70)*/
}

.btn-block {
    display: block;
    width: 100%;
    padding-right: 0;
    padding-left: 0;
}

.block-1 {
    background: var(--me-sea-green-crayola);
    width: 100%;
    height: 3px;
    border: 0;
}

.login-textbox {
    /*не используется*/
    width: 250px;
}

@media only screen and (max-width: 959px) {
    .carousel-item {
        height: 200px
    }
}

@media only screen and (min-width: 960px) {
    .carousel-item {
        height: 400px
    }
}

@media (min-width: 576px) {
    .card-columns {
        column-count: 2;
    }

    .login-textbox {
        width: 210px;
    }
}

@media (min-width: 768px) {
    .card-columns {
        column-count: 2;
    }

    .login-textbox {
        width: 180px;
    }
}

@media (min-width: 992px) {
    .card-columns {
        column-count: 3;
    }

    .login-textbox {
        width: 260px;
    }
}

@media (min-width: 1200px) {
    .card-columns {
        column-count: 3;
    }

    .login-textbox {
        width: 280px;
    }
}

@media (max-width: 768px) {
    .need-hide {
        display: none;
    }
}

